Fixing Github Project Spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,7 @@
     height: 200px;
     border: 0px inset gray;
     border-radius: 16px;
-    flex: 1 1 50%;
+    flex: 1 1 40%;
     background-image: url("./Comingsoon.png");
     background-size: cover;
     background-position: center;
@@ -72,6 +72,3 @@
     vertical-align: middle;
     align-items: center;
 }
-
-@media (min-width: 1200px) {
-  
